# network_map

./: .gitignore  CMakeLists.txt  LISEZMOI.md  example.env  package.json
cartonet/: algo_cartonet.txt  cartonet  cartonet.c  fonctions.c  fonctions.c~  librairie.h  os.h
cartonet/tests_unitaires/: CMakeLists.txt  tests.c  tests.c~
client/: README.md  compter  index.html  package-lock.json  package.json  structure.txt  webpack.config.js
client/src/: index.js  mounter.js
client/src/components/: footer.js  navbar.js  sidebar.js
client/src/config/: server.js
client/src/models/: hote.model.js  statistique.model.js
client/src/views/: client_mng.js  configuration.js  dashboard.js  layout.js  login.js  register.js  statistique.js  table.js
include/: os.h
programme/include/: os.h
programme/src/: objet.json  os  os.c  os.gperf  os_hash.h
server/: app.js  package-lock.json  package.json  route.js
server/src/: app.module.ts
src/: CMakeLists.txt  os  os.c  os.gperf  os_hash.h  redis  redis.c  redis.c~
src/htable/: hopscotch.c  hopscotch.c~  hopscotch.h
src/test/: CMakeLists.txt  tests_skeleton.c
